--- a/map.html
+++ b/map.html
@@ -7,6 +7,8 @@
 
 <body>
     <div id="mapid"></div>
+    <title>近松の里　散策ルート</title>
+    <p>公共交通を使って</p>
 </body>
 </html>
 
@@ -171,3 +173,5 @@ var basemaps = {
 L.control.layers(basemaps,layers).addTo(map);
 
 </script>
+
+<>
