--- a/map.html
+++ b/map.html
@@ -9,15 +9,11 @@
     <div id="mapid"></div>
      <H1>近松の里　散策ルート</H1>
 
-
-    <p>　公共交通
-        （福井鉄道） 西鯖江駅 8：35　→ 神明駅　→（つつじバス）
-        立待公民館    徒歩（約７ｋｍ）
-        →　近松門左衛門記念碑公園　→　西光寺表門→　
-        石田の渡し　→　 吉江七曲り　→　福正寺　→　吉江藩館跡→　
-        近松門左衛門座像　→　 大谷公園（トイレ）→　春慶寺（トイレ）→
-        榎お清水　　→　昼食　→　つつじバス） 立待公民館 12: 12　→　
-        神明駅経由 　西鯖江駅 12: 54</p>
+<p> 公共交通
+福井鉄道 西鯖江駅 8：35　→　 神明駅　→　つつじバス 立待公民館（ウォーキング）→　近松門左衛門記念碑公園→　西光寺表門→　石田の渡し→　 吉江七曲り→　福正寺→　吉江藩館跡→ 近松門左衛門座像（ トイレ）→　 大谷公園（トイレ）→春慶寺（トイレ）→ 榎お清水→昼食→
+つつじバス 立待公民館 12：12　→　神明駅 西鯖江駅 12 54
+（車で来られる場合は立待公民館、大谷公園、近松情報館）
+ </P>
    
 </body>
 </html>
