--- a/map.html
+++ b/map.html
@@ -51,6 +51,7 @@
     L.marker([35.989859,136.176626]).bindPopup('9 春慶寺（トイレ）').addTo(mymap);
     L.marker([35.989286,136.177752]).bindPopup('10 榎お清水').addTo(mymap);
     L.marker([35.990710,136.165452]).bindPopup('11 天満神社').addTo(mymap);
+    L.marker([35.978852,136.173340]).bindPopup('12 糺野お清水').addTo(mymap);
    
 /*-- //面の追加(塗りつぶし色、透過度を指定)
 L.polygon([
